# ColoredLogging

./: LICENSE  README.md  pyproject.toml
src/ColoredLogging/: core.py
tests/: test.py
